# sre-incident-response-openenv

./: .env.example  Dockerfile  README.md  actions.py  client.py  inference.py  models.py  observation.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py  verifier.py  world.py
docs/: README.md  api_reference.md  deployment_guide.md  production_guide.md
scenarios/: __init__.py  base.py  s01_restart_cascade.py  s02_corrupt_scaleup.py  s03_wrong_rollback.py  s04_cache_stampede.py  s05_webhook_retry_storm.py
scripts/: validate_policies.py
server/: Dockerfile  __init__.py  app.py  ops_adapters.py  ops_auth.py  ops_config.py  ops_models.py  ops_service.py  ops_store.py  requirements.txt  sre_incident_environment.py
sre_incident_env/: __init__.py  actions.py  app.py  client.py  models.py  observation.py  reward.py  verifier.py  world.py
sre_incident_env/scenarios/: __init__.py  base.py  s01_restart_cascade.py  s02_corrupt_scaleup.py  s03_wrong_rollback.py
tests/: test_ops_control_plane.py  test_scenarios.py
